# rust_chat

./: .env  Cargo.toml  diesel.toml
migrations/2024-12-08-081809_create_chat/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  schema.rs
static/: auth.css  auth.html  auth.js  chat.css  chat.html  chat.js
